jenkins-server-template.yaml
---
AWSTemplateFormatVersion: "2010-09-09"

Parameters:
  KeyPair:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Select an existing key pair to access via SSH

  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'

  VpcId:
    Description: Select VPC to deploy to
    Type: AWS::EC2::VPC::Id

  VpcSubnetId:
    Description: Select subnet to deploy to
    Type: AWS::EC2::Subnet::Id


Resources:
  JenkinsMasterInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: t2.micro
      KeyName: !Ref KeyPair
      SecurityGroupIds:
        - !Ref JenkinsSecurityGroup
      SubnetId: !Ref VpcSubnetId
      UserData:
        Fn::Base64: !Sub |
          #!/usr/bin/env bash
          # Enable Logging
          exec > >(tee /var/log/user-data.log|logger -t user-data -s 2>/dev/console) 2>&1
          # Update system
          yum update -y
          # Install the latest cfn bootstrap tools
          yum install aws-cfn-bootstrap -y
          # Get Jenkins repo
          wget -O /etc/yum.repos.d/jenkins.repo http://pkg.jenkins-ci.org/redhat/jenkins.repo
          # Import key file
          rpm --import https://pkg.jenkins.io/redhat/jenkins.io.key
          # Start cfn-init
          /opt/aws/bin/cfn-init -v -s ${AWS::StackId} -r JenkinsMasterInstance --region ${AWS::Region}
          /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource JenkinsMasterInstance --region ${AWS::Region}
    Metadata:
      Comment: Configure Jenkins
      AWS::CloudFormation::Init:
        config:
          files:
            /etc/cfn/cfn-hup.conf:
              content: !Sub |
                [main]
                stack=${AWS::StackId}
                region=${AWS::Region}
              mode: "0004000"
              owner: root
              group: root
            /etc/cfn/hooks.d/cfn-auto-reloader.conf:
              content: !Sub |
                [cfn-auto-reloader-hook]
                triggers=post.update
                path=Resources.JenkinsMasterInstance.Metadata.AWS::CloudFormation::Init
                action=/opt/aws/bin/cfn-init -v
                  --stack ${AWS::StackName}
                  --resource JenkinsMasterInstance
                  --region ${AWS::Region}
                runas=root
              mode: "000400"
              owner: root
              group: root
          packages:
            yum:
              jenkins: []
              java-1.8.0-openjdk-devel: []
              #amazon-cloudwatch-agent: []
          services:
            sysvinit:
              jenkins:
                enabled: true
                ensureRunning: true
              cfn-hup:
                enabled: true
                ensureRunning: true
                files:
                  - /etc/cfn/cfn-hup.conf
                  - /etc/cfn/hooks.d/cfn-auto-reloader.conf
    CreationPolicy:
      ResourceSignal:
        Timeout: PT10M

  JenkinsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP access
      SecurityGroupIngress:
      - CidrIp: 0.0.0.0/0
        FromPort: 8080
        ToPort: 8080
        IpProtocol: tcp
      - CidrIp: 0.0.0.0/0
        FromPort: 22
        ToPort: 22
        IpProtocol: tcp
      VpcId: !Ref VpcId

#  JenkinsLogGroup:
#    Type: AWS::Logs::LogGroup
#    Properties:
#      LogGroupName: JenkinsLogGroup
#      RetentionInDays: 3
